--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "vite": "^7.1.2"
   },
   "dependencies": {
-    "page": "^1.3.7"
+    "@tailwindcss/typography": "^0.5.16",
+    "@tailwindcss/vite": "^4.1.13",
+    "daisyui": "^5.1.12",
+    "page": "^1.3.7",
+    "tailwindcss": "^4.1.13"
   }
 }
