--- a/package.json
+++ b/package.json
@@ -21,8 +21,11 @@
   "dependencies": {
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.1.13",
+    "axios": "^1.7.7",
     "daisyui": "^5.1.12",
     "page": "^1.3.7",
+    "svelte-french-toast": "^1.2.0",
+    "svelte-select": "^5.8.3",
     "tailwindcss": "^4.1.13"
   }
 }
