--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@sveltejs/vite-plugin-svelte": "^6.1.1",
     "@tsconfig/svelte": "^5.0.4",
     "@types/page": "^1.11.9",
+    "@zerodevx/svelte-toast": "^0.9.6",
     "svelte": "^5.38.1",
     "svelte-check": "^4.3.1",
     "typescript": "~5.8.3",
@@ -24,7 +25,6 @@
     "axios": "^1.7.7",
     "daisyui": "^5.1.12",
     "page": "^1.3.7",
-    "svelte-french-toast": "^1.2.0",
     "svelte-select": "^5.8.3",
     "tailwindcss": "^4.1.13"
   }
