--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "daisyui": "^5.1.12",
     "page": "^1.3.7",
     "svelte-select": "^5.8.3",
+    "svelte-multiselect": "^3.0.0",
     "tailwindcss": "^4.1.13"
   }
 }
